--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
+    "bulma": "^0.9.4",
+    "mongoose": "^7.0.3",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.62.0",
     "typescript": "5.0.4"
   }
 }
